1.3.0 unreleased
================

 * Removed the unmaintained utilities folder including the report scripts.
   [hannosch]

 * Moved old_folder_contents over from CMFPlone as it is still used in
   atct_topic_subtopics.pt.
   [hannosch]

1.2.0-final 2007-08-16
======================

 * No longer enforce vocabularies on constraintypes fields, it's essentially
   pointless, and not enforcing them helps workaround a strange bug:
   http://dev.plone.org/plone/ticket/6734
   [alecm]

 * Fixed i18n markup for event date validation error messages.
   [hannosch]

 * Only show related items once instead of twice.
   [wichert]

1.2.0-rc2 2007-06-11
====================

 * Add link validation to event field.
   [alecm]

1.2.0-rc1 2007-06-08
====================

 * Fix concatenation issues between related items and query results in Topics.
   [alecm]

 * Fixed migration bug in the atct tool migration. This closes
   http://dev.plone.org/plone/ticket/6549 and
   http://dev.plone.org/plone/ticket/6550.
   [hannosch]

 * Show the text field and related items in the Topic view.
   [wichert]

 * Properly i18n-ize imagetransforms TRANSPOSE_MAP by using ATCTMessageFactory.
   [hannosch]

 * Removed all usage of PloneMessageFactory and replaced it by using ATCT's own
   message factory. The extraction tools aren't able to deal with two different
   message factories used for a single package.
   [hannosch]

 * Fixed some i18n markup to use new ids for the collections related messages,
   so these do not conflict with the old ones using smart folder.
   [hannosch]

 * Hide the fields properly. The user may not have permission to edit them!
   Also fix related typo-induced security hole.
   [optilude]

 * Corrected cmf_edit_kws on the new ATDocumentBase class, which is used as a
   base for ATNewsItem. It's absence caused a test failure in CMFPlone for the
   text_format which needs special handling.
   [hannosch]

1.2.0-beta2 2007-04-29
======================
