@@ -5,14 +5,22 @@
 from Testing import ZopeTestCase
 from Products.ATContentTypes.tests.atcttestcase import ATCTFunctionalSiteTestCase 
 
-FILES = ['webdav.txt', 'http_access.txt']
+FILES = [
+    'webdav.txt', 'http_access.txt'
+]
+
+from zope.testing import doctest
+OPTIONFLAGS = (doctest.ELLIPSIS |
+               doctest.NORMALIZE_WHITESPACE)
 
 def test_suite():
     import unittest
     suite = unittest.TestSuite()
     from Testing.ZopeTestCase import FunctionalDocFileSuite as FileSuite
-    for file in FILES:
-        suite.addTest(FileSuite(file, package="Products.ATContentTypes.tests",
+    for testfile in FILES:
+        suite.addTest(FileSuite(testfile,
+                                optionflags=OPTIONFLAGS,
+                                package="Products.ATContentTypes.tests",
                                 test_class=ATCTFunctionalSiteTestCase)
                      )
     return suite
