@@ -1,6 +1,9 @@
 1.3.0 unreleased
 ================
 
+ * Adjusted tests to changed test base classes of Archetypes.
+   [hannosch]
+
  * Removed the unmaintained utilities folder including the report scripts.
    [hannosch]
 
